# itsmypa

./: .gitignore  INSTALL.md  README.md  app.py  requirements-dev.txt  requirements.txt  run.sh  ui.html
.github/: FUNDING.yml
docs/: CNAME  index.html
frontend/: index.html
native/audiocap/: main.swift
package/: build_server.sh  build_shell.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: test_app.py
